# arrakis2

./: .gitignore  CHALLENGE2_WALKTHROUGH.md  CLAUDE.md  README.md
backend/: .env.example  main.py  pyproject.toml
backend/notebooks/: cex_comparison.ipynb  ixs_client_synthesis.ipynb  ixs_execution_quality.ipynb  ixs_vault_performance.ipynb  liquidity_analysis.ipynb  optimization_benchmark.ipynb  slippage.ipynb
backend/src/: abis.py  amm_math.py  async_rpc.py  block_utils.py  cache.py  capital_efficiency.py  cex_analysis.py  config.py  liquidity_distribution.py  migration_detection.py  multicall.py  optimized_v4_fetch.py  price_feeds.py  slippage.py  tvl.py  v2_slippage.py  v4_historical_slippage.py  vault_performance.py  vault_rebalancing.py
backend/temp_scripts/: prototype_decomposition_chart.py  test_rebalancing.py  test_snapshot_plot.py  test_v2_reserves_bar.py
backend/tests/: test_capital_efficiency.py  test_vault_decomposition.py
