[project]
name = "arrakis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "ccxt>=4.5.24",
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "nbconvert>=7.16.6",
    "nest-asyncio>=1.6.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyright>=1.1.408",
    "web3>=7.14.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.8",
]
